--- a/APPVIEW/Views/Account/Register.cshtml
+++ b/APPVIEW/Views/Account/Register.cshtml
@@ -146,7 +146,7 @@
                                 <span id="nameError" class="text-danger"></span>
                             </div>
                             <div class="form-floating form-floating-outline mb-3">
-                                <input asp-for="Email" type="text" class="form-control" id="email" name="email" placeholder="Nhập email của bạn" />
+                                <input asp-for="Email" type="email" class="form-control" id="email" name="email" placeholder="Nhập email của bạn" />
                                 <label for="email">Email</label>
                             </div>
                             <div class="form-floating form-floating-outline mb-3">
