--- a/APPVIEW/Views/Bill/GetList2.cshtml
+++ b/APPVIEW/Views/Bill/GetList2.cshtml
@@ -125,17 +125,15 @@
                                 </td>
                                 <td>
                                     @{
-                                        if (itembill.PayDate != null)
-                                        {
-                                            @itembill.PayDate
+                                        string formattedDate2 = "Chưa thay đổi";
 
-                                        }
-                                        else
+                                        if (itembill.PayDate.HasValue)
                                         {
-
-                                            <span>Chưa thanh toán.</span>
+                                            formattedDate2 = itembill.PayDate.Value.ToString("dd/MM/yyyy");
                                         }
                                     }
+
+                                    @formattedDate2
 
                                 </td>
                                 <td>
