--- a/APPVIEW/Views/QLBills/ShowBillDaNhan.cshtml
+++ b/APPVIEW/Views/QLBills/ShowBillDaNhan.cshtml
@@ -127,7 +127,7 @@
                                         <div class="dropdown-menu dropdown-menu-end m-0">
                                             <a href=" @Url.Action("nhanhang", new { id = itembill.id })" class="dropdown-item ">
                                                 <i class="mdi mdi-truck me-2"></i>
-                                                <span>Nhận hàng</span>
+                                                <span>Thành công</span>
                                             </a>
                                             <a href="@Url.Action("Chitiet", new { id = itembill.id })" class="dropdown-item">
                                                 <i class="mdi mdi-eye-outline me-2"></i>
