--- a/APPVIEW/Views/Product/GetList.cshtml
+++ b/APPVIEW/Views/Product/GetList.cshtml
@@ -17,7 +17,7 @@
             <span class="mdi mdi-plus-thick">Create new</span>
         </a>
 
-        <form asp-action="Search" method="get" class="form-inline" style="margin-left: 1000px">
+        <form asp-action="GetList" method="post" class="form-inline" style="margin-left: 1000px">
             <input placeholder="Search" type="text" name="searchTerm" id="searchTerm" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2" />
         </form>
         <div class="table-responsive">
