--- a/APPVIEW/Views/Bill/GetList.cshtml
+++ b/APPVIEW/Views/Bill/GetList.cshtml
@@ -92,7 +92,8 @@
                             <tr>
                                 <td>@(stt += 1)</td>
                                 <td>
-                                    @foreach (var acc in ViewBag.account)
+                                    @itembill.Name
+                                  @*   @foreach (var acc in ViewBag.account)
                                     {
 
                                         if (acc.Id == itembill.AccountId)
@@ -105,7 +106,7 @@
                                         {
                                             @itembill.Name
                                         }
-                                    }
+                                    } *@
                                    
                                 </td>
                                 <td>
