--- a/APPVIEW/Views/Bill/GetList2.cshtml
+++ b/APPVIEW/Views/Bill/GetList2.cshtml
@@ -86,7 +86,8 @@
                             <tr>
                                 <td>@(stt += 1)</td>
                                 <td>
-                                    @foreach (var acc in ViewBag.account)
+                                    @itembill.Name
+                                   @*  @foreach (var acc in ViewBag.account)
                                     {
 
                                         if (acc.Id == itembill.AccountId)
@@ -95,7 +96,7 @@
                                             break;
 
                                         }
-                                    }
+                                    } *@
                                 </td>
                                 <td>
                                     @itembill.Code
